# econ-cn-docx

./: .gitignore  README.md  cn_docx.py  cn_docx_toolkit.py  demo.py  paper.py  pyproject.toml  requirements.txt  skill.md  tests.py
references/: pipeline.py  toolkit.py
tests/: test_paper.py
tests/tables/: test_table.rtf
